--- a/.github/workflows/update-lockfile.yml
+++ b/.github/workflows/update-lockfile.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   
 jobs:
-  updatex:
+  update:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -17,18 +17,18 @@ jobs:
         sudo apt-get update
         sudo apt-get install --no-install-recommends wget ca-certificates
         sudo wget https://raw.githubusercontent.com/HibiKier/zhenxun_bot/main/pyproject.toml
-        sudo sed -i '8,11d' pyproject.toml
+        sed -i '8,11d' pyproject.toml
         python3 -V
         pip3 -V
         echo "Start install Poetry"
-        sudo pip3 install poetry
+        pip3 install poetry
         echo "Show Poetry Version"
-        sudo poetry --version
-        sudo rm requirements.txt
+        poetry --version
+        rm requirements.txt
         echo "Export Requirements File"
         poetry export -f requirements.txt --output requirements.txt --without-hashes
-        sudo rm pyproject.toml poetry.lock
-        sudo ls -la --color
+        rm pyproject.toml poetry.lock
+        ls -la --color
     - name: Commit & Push changes
       uses: actions-js/push@master
       with:
