--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,10 @@ name: Docker Image CI
 on:
   workflow_dispatch:
         
+env:
+  REGISTRY: ghcr.io
+  IMAGE: disappear9/zhenxun_bot
+  
 #工作流程
 jobs:
 
@@ -28,12 +32,13 @@ jobs:
         sudo chmod 755 zx-cli
         sudo ls -la --color
     
-    # 登录 docker Hub
-    - name: Login Docker Hub
+    # 登录 ghcr.io
+    - name: Login ghcr.io
       uses: docker/login-action@v2.0.0
       with:
-        username: ${{secrets.DOCKERHUB_USERNAME}}
-        password: ${{secrets.DOCKERHUB_TOKEN}}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
     
     # 镜像元数据操作
     - name: Docker Metadata action
@@ -49,7 +54,7 @@ jobs:
         tags: |
           type=raw,value=latest,enable={{is_default_branch}}
         images: |
-          disappear9/zhenxun_bot
+          ${{ env.REGISTRY }}/${{ env.IMAGE }}
     
     # 构建 并 推送镜像
     - name: build and push docker image
