--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,11 @@ jobs:
   build:
     # 运行环境
     runs-on: ubuntu-latest
+    
+    permissions:
+      packages: write
+      contents: read
+      
     # 运行步骤
     steps:
     
