--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,8 +18,6 @@ jobs:
       contents: read
       
     steps:
-    
-    # 检出（仓库）文件 / 获取代码
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
@@ -32,7 +30,10 @@ jobs:
         sudo rm -rf botfile
         sudo chmod 755 zx-cli
         sudo ls -la --color
-    
+        
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+        
     # 登录 ghcr.io
     - name: Login ghcr.io
       uses: docker/login-action@v2
@@ -61,6 +62,7 @@ jobs:
     - name: build and push docker image
       uses: docker/build-push-action@v3
       with:
+        platforms: linux/amd64
         context: .
         push: true
         tags: ${{ steps.meta.outputs.tags }}
