--- a/.github/workflows/update-lockfile.yml
+++ b/.github/workflows/update-lockfile.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Commit & Push changes
       uses: actions-js/push@master
       with:
-        github_token: ${{ secrets.ZXBOTGIT_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
